--- a/index.html
+++ b/index.html
@@ -7,11 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <title>TP Ada Computación</title>
+    <script src="datos-precargados.js"></script>
 </head>
 
 <body>
-    <section>
 
+    <!-- ventana modal -->
+    <div class="fondo-modal"></div>
+    <div class="container-ventana-modal">
+        <div class="ventana-modal">
+            <div class="titulo-azul">
+                <h2>Agregar venta</h2>
+            </div>
+            <div class="container-form-modal">
+                <div class="form-modal">
+                    <form>
+                        <div class="container-select-vendedora">
+                            <h3>Vendedora</h3>
+                            <select name="Vendedora">
+                                <option value="vendedora-1">Ada</option>
+                                <option value="vendedora-2" selected>Grace</option>
+                                <option value="vendedora-3">Hedy</option>
+                                <option value="vendedora-4">Sheryl</option>
+                            </select>
+                        </div>
+                        <div class="container-select-componentes">
+                            <h3>Componentes</h3>
+                            <select name="select-componentes">
+                                <option value="componente-1">Monitor GPRS 3000</option>
+                                <option value="componente-2" selected>Motherboard ASUS 1500</option>
+                                <option value="componente-3">Monitor ASC 543</option>
+                                <option value="componente-4">Motherboard ASUS 1200</option>
+                                <option value="componente-5">Motherboard MZI</option>
+                                <option value="componente-6">HDD Toyiva</option>
+                                <option value="componente-7">HDD Wezter Dishital</option>
+                                <option value="componente-8">RAM Quinston</option>
+                                <option value="componente-9">RAM Quinston Fury</option>
+                            </select>
+                        </div>
+                        <div class="container-select-sucursal">
+                            <h3>Sucursal</h3>
+                            <select multiple name="sucursal" size="2" class="input-sucursal">
+                                <option value="centro">Centro</option>
+                                <option value="caballito">Caballito</option>
+                            </select>
+                        </div>
+                        <div class="container-select-sucursal">
+                            <h3>Fecha</h3>
+                            <input type="date" class="input-fecha">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ventana modal -->
+
+    <section>
         <div class="container-sucursal-reportes">
             <!-- TARJETA SUCURSAL -->
             <div class="tarjeta">
@@ -86,7 +138,8 @@
                                 <td>Centro</td>
                                 <td>Monitor GPRS 3000 - Motherboard ASUS 1500</td>
                                 <td>320</td>
-                                <td><button>Lapiz</button><button>Tacho</button></td>
+                                <td><button class="boton-editar">Lapiz</button><button
+                                        class="boton-tacho">Tacho</button></td>
                             </tr>
                             <tr>
                                 <td>01/01/2019</td>
@@ -94,7 +147,8 @@
                                 <td>Centro</td>
                                 <td>Monitor GPRS 3000 - Motherboard ASUS 1500</td>
                                 <td>320</td>
-                                <td><button>Lapiz</button><button>Tacho</button></td>
+                                <td><button class="boton-editar">Lapiz</button><button
+                                        class="boton-tacho">Tacho</button></td>
                             </tr>
                             <tr>
                                 <td>02/01/2019</td>
@@ -102,7 +156,8 @@
                                 <td>Caballito</td>
                                 <td>Monitor ASC 543 - Motherboard MZI</td>
                                 <td>280</td>
-                                <td><button>Lapiz</button><button>Tacho</button></td>
+                                <td><button class="boton-editar">Lapiz</button><button
+                                        class="boton-tacho">Tacho</button></td>
                             </tr>
                             <tr>
                                 <td>10/01/2019</td>
@@ -110,7 +165,8 @@
                                 <td>Centro</td>
                                 <td>Monitor ASC 543 - Motherboard ASUS 1200</td>
                                 <td>350</td>
-                                <td><button>Lapiz</button><button>Tacho</button></td>
+                                <td><button class="boton-editar">Lapiz</button><button
+                                        class="boton-tacho">Tacho</button></td>
                             </tr>
                             <tr>
                                 <td>12/01/2019</td>
@@ -118,7 +174,8 @@
                                 <td>Caballito</td>
                                 <td>Monitor GPRS 3000 - Motherboard ASUS 1200</td>
                                 <td>300</td>
-                                <td><button>Lapiz</button><button>Tacho</button></td>
+                                <td><button class="boton-editar">Lapiz</button><button
+                                        class="boton-tacho">Tacho</button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -129,6 +186,8 @@
         <!--     TARJETA VENTAS     -->
 
     </section>
+    <script src="funciones.js"></script>
+    <script src="ventanas-modal.js"></script>
 </body>
 
 </html>
