ventanas modal + titulo ok

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div class="container-ventana-modal">
         <div class="ventana-modal">
             <div class="titulo-azul">
-                <h2>Agregar venta</h2>
+                <h2 id="titulo-ventana-modal">Agregar venta</h2>
             </div>
             <div class="container-form-modal">
                 <div class="form-modal">
                     <form>
                         <div class="container-select-vendedora">
                             <h3>Vendedora</h3>
-                            <select name="Vendedora">
+                            <select name="Vendedora" class="select-vendedora">
                                 <option value="vendedora-1">Ada</option>
                                 <option value="vendedora-2" selected>Grace</option>
                                 <option value="vendedora-3">Hedy</option>
